--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,10 +1,10 @@
 #header {
     display: flex;
+    justify-content: center;
     align-items: center;
     
     width: 100%;
     height: var(--header-height);
-    padding: 0px 40px;
     
     box-sizing: border-box;
     
@@ -28,4 +28,11 @@
     
     font-size: 24px;
     font-weight: 600;
+}
+
+.header-wrapper {
+    display: flex;
+    align-items: center;
+    
+    width: 60%;
 }
