--- a/src/components/css/Main.css
+++ b/src/components/css/Main.css
@@ -1,8 +1,18 @@
 #main {
     display: flex;
+    justify-content: center;
     
     width: 100%;
-    height: calc(100% - var(--header-height) - var(--footer-height));
+    min-height: calc(100vh - var(--header-height) - var(--footer-height));
+    height: auto;
     
     background-color: #d8eefe;
+}
+
+.main-wrapper {
+    display: flex;
+    justify-content: center;
+    
+    margin: 40px 0px;
+    width: 60%;
 }
