--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -16,10 +16,18 @@
     display: flex;
     align-items: center;
     
-    gap: 20px;
+    gap: 30px;
     
     margin-left: auto;
     list-style: none;
+}
+
+.nav-links li {
+    transition: transform .1s;
+}
+
+.nav-links li:hover {
+    transform: scale(1.2);
 }
 
 .nav-links a {
@@ -35,4 +43,24 @@
     align-items: center;
     
     width: 60%;
+}
+
+#cart-counter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    text-align: center;
+    
+    width: 20px;
+    height: 20px;
+    
+    font-size: 18px;
+    font-weight: 600;
+    
+    transform: translateX(-100%) translateY(100%);
+    
+    border-radius: 50%;
+    background-color: #ef4565;
+    color: #094067;
 }
