--- a/src/components/css/Shop.css
+++ b/src/components/css/Shop.css
@@ -9,9 +9,14 @@
     display: flex;
     flex-direction: column;
     
-    
+    gap: 10px;
 }
 
 .shop-item img {
     max-height: 300px;
+}
+
+.shop-item p {
+    padding: 0;
+    margin: 0;
 }
