Add complete functionality for the cart

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,14 @@
   --header-height: 80px;
   --footer-height: 40px;
 }
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
