--- a/src/components/css/Cart.css
+++ b/src/components/css/Cart.css
@@ -1,4 +1,4 @@
-#cart {
+#cart-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -9,8 +9,43 @@
     margin: 0;
     gap: 40px;
     
-    width: 60%;
-    height: 100%;
+    width: 400px;
+    height: 1000px;
+    
+    overflow: auto;
+}
+
+#cart-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
+    margin: 0;
+    padding: 0;
+    
+    gap: 40px;
+}
+
+#checkout {
+    margin: 0;
+    padding: 0;
+    
+    border: none;
+    border-radius: 50px;
+    background-color: #3da9fc;
+    
+    width: 80%;
+    height: 50px;
+    
+    font-size: 24px;
+    font-weight: 600;
+    
+    cursor: pointer;
+}
+
+#checkout:hover {
+    background-color: #1e9bfb;
 }
 
 .cart-item {
