--- a/src/components/css/Shop.css
+++ b/src/components/css/Shop.css
@@ -9,7 +9,11 @@
     display: flex;
     flex-direction: column;
     
+    max-width: 300px;
+    
     gap: 10px;
+    
+    animation: fade-in .2s;
 }
 
 .shop-item img {
