--- a/src/components/css/Shop.css
+++ b/src/components/css/Shop.css
@@ -8,6 +8,7 @@
 .shop-item {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     
     max-width: 300px;
     
